--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <input type="checkbox" id="menu-checkbox" class="menu-checkbox">
           <label for="menu-checkbox" class="fas fa-bars"></label>
            <ul class="menu">
-             <li><a href="#hello" title="Hello">Hello</a></li>
+              <li><a href="#hello" title="Hello">Hello</a></li>
               <li><a href="#about" title="About">About</a></li>
               <li><a href="#work" title="Work">Work</a></li>
               <li><a href="#services" title="Services">Services</a></li>
@@ -26,13 +26,13 @@
             </ul> 
       </nav>
     </header>
-    <div id="slider">
-      <figure>
-        <img src="Images/blog/classe.jpg" alt>
-        <img src="Image/blog/rueonemin.jpg" alt>
-        <img src="Images/blog/ruetwo-min.jpg" alt>
+      <div id="slider">
+        <figure>
+          <img src="Images/blog/classe.jpg" alt>
+          <img src="Image/blog/rueonemin.jpg" alt>
+          <img src="Images/blog/ruetwo-min.jpg" alt>
       </figure>
-    </div>
+      </div>
     <section>
         <h1 class="title1">We're Patti <em class=underligne>studio</em></h1>
         <div class="panel-studio">
@@ -46,8 +46,8 @@
              <p class="paragraph"> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore. </p>
      </div>
            </div>
-    <div class="we-creative">
-      <div class="card-studio">
+      <div class="we-creative">
+          <div class="card-studio">
           <h2 class="title2">we're creative.</h2> 
             <p class="paragraph">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
             </div>
@@ -125,16 +125,16 @@
         </div>
         <div class="container">
         <div id="portfolio">
-        <img src="Images/portfolio/voiture.jpg" alt="voiture">
-        <img src="Images/portfolio/femme.jpg" alt="femme">
-        <img src="Images/portfolio/ordinateur.jpg" alt="ordinateur">
-        <img src="Images/portfolio/phare.jpg" alt="phare">
-        <img src="Images/portfolio/vélo.jpg" alt="vélo">
-        <img src="Images/portfolio/marcheur.jpg" alt="marcheur">
-        <img src="Images/portfolio/focus.jpg" alt="focus">
-        <img src="Images/portfolio/champ.jpg" alt="champ">
-        <img src="Images/portfolio/horloge.jpg" alt="horloge">
-        <img src="Images/portfolio/guitare.jpg" alt="guitare">
+        <img class="one" src="Images/portfolio/voiture.jpg" alt="voiture">
+        <img class="two" src="Images/portfolio/femme.jpg" alt="femme">
+        <img class="three" src="Images/portfolio/ordinateur.jpg" alt="ordinateur">
+        <img class="four" src="Images/portfolio/phare.jpg" alt="phare">
+        <img class="five" src="Images/portfolio/vélo.jpg" alt="vélo">
+        <img class="six" src="Images/portfolio/marcheur.jpg" alt="marcheur">
+        <img class="seven" src="Images/portfolio/focus.jpg" alt="focus">
+        <img class="eight" src="Images/portfolio/champ.jpg" alt="champ">
+        <img class="nine" src="Images/portfolio/horloge.jpg" alt="horloge">
+        <img class="ten" src="Images/portfolio/guitare.jpg" alt="guitare">
         </div>
         </div>
     </section>
@@ -168,16 +168,16 @@
     </section>
     <section>
       <h2 class="title1">FROM THE BLOG</h2>
-      <div class="panel-blog1">
+      <div class="panel-blog">
         <div>
-          <img src="Images/blog/voiture2.jpg" alt="voiture"> 
+          <img class="img-blog" src="Images/blog/voiture2.jpg" alt="voiture"> 
            <h3 class="title-blog">perfect sunday morning ride</h3>
             <i class="fas fa-pen-square"></i> <em>March 1,2014</em>
             <p class="paragraph"> Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur </p>
             <p class="read-more">read more</p>
          </div>
       <div class="card-blog">
-        <img src="Images/blog/travailler.jpg" alt="travailler"> 
+        <img class="img-blog" src="Images/blog/travailler.jpg" alt="travailler"> 
         <h3 class="title-blog">working like a workaholic</h3>
         <i class="fas fa-pen-square"></i><em>FEBRUARY 28,2014</em>
         <p class= "paragraph">Nullam dipiscing sapien ut mi elementum sit amet dictum magna luctus. Donec id ligula ut tellus ultricies ornare quis vel nunc lorem ipsum dolor sit amet.
@@ -186,23 +186,21 @@
       </div>
       <br/>
       <div class="card-blog">
-      <img src="Images/blog/rue-nuit.jpg" alt="rue de nuit">
+      <img class="img-blog" src="Images/blog/rue-nuit.jpg" alt="rue de nuit">
       <h3 class="title-blog">case study:envato website redesign</h3>
       <i class="fas fa-pen-square"></i><em class="date-blog">FEBRUARY 14,2014</em>
       <p class="paragraph">Nunc blandit tincidunt consequat. Duis diam metus, suscipit in pulvinar eget, egestas id arcu. Duis a enim vel mauris ultrices. Nullam aliquet velit ac velit tempus in semper neque auctor.</p>
       <p class="read-more">read more</p>
       </div>
-    </div>
-    <div class="panel-blog2">
       <div class="card-blog">
-        <img src="Images/blog/pause-café.jpg" alt="pause café">
+        <img class="img-blog" src="Images/blog/pause-café.jpg" alt="pause café">
         <h3 class="title-blog">how videos can help promote your business</h3>
           <i class="fas fa-pen-square"></i><em class="date-blog">JANUARY 28,2014</em>
           <p class="paragraph"> Donec id ligula ut tellus ultricies ornare quis vel nunc. In id purus vel magna porta laoreet at a dolor. Aliquam aliquam mollis feugiat. </p>
         <p class="read-more">read more</p>
       </div>
       <div class="card-blog">
-        <img src="Images/blog/panier-vélo.jpg" alt="panier vélo"> 
+        <img class="img-blog" src="Images/blog/panier-vélo.jpg" alt="panier vélo"> 
         <h3 class="title-blog">role of size in logo design</h3>
           <i class="fas fa-pen-square"></i><em class="date-blog">JANUARY 7,2014</em>
           <p class="paragraph"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -210,34 +208,42 @@
           <p class="read-more">read more</p>
       </div> 
     </div>
+    <div class="panel-blog2">
+    <div class="card-blog">
+    <div class="blockquote">
       <h3 class="date-blog">Logic will get you from A to B. Imagination will take you just about everywhere.</h3> <br />
       <i class="fas fa-quote-right"></i> <em class="date-blog">December 10, 2013</em>
       <p class="quote-autor-blog">Albert Einstein</p>
+      </div>
       <h3 class="link-blog">WRITE FOR TUTSPLUS.COM – PASSIONATE PEOPLE REQUIRED!</h3> 
       <i class="fas fa-link"></i><em class="date-blog">July 24, 2013</em>
+    </div>
+    </div>
     </section>
     <section id="twitter-feed">
-    <h2 class="title1">TWITTER FEED</h2>
-    <span class="time-twitter">3 months ago</span>
-    <p class="text-twitter">Drive traffic, build quality followers and improve your website ranking via </p>
-    <p class="text-twitter, link-twitter">#Sociallocker @byonepress!!</p>
-    <p class="link-logo">https://t.co/G2RviBsaAs </p>
-    <p>Reply Retweet Favorite </p>
-    <i class="fas fa-reply">Reply</i> <i class="fas fa-retweet">Retweet</i> <i class="far fa-star">Favorite</i>
+      <h2 class="title1">TWITTER FEED</h2>
+        <span class="time-twitter">3 months ago</span>
+        <p class="text-twitter">Drive traffic, build quality followers and improve your website ranking via </p>
+        <p class="text-twitter, link-twitter">#Sociallocker @byonepress!!</p>
+        <p class="link-logo">https://t.co/G2RviBsaAs </p>
+        <p>Reply Retweet Favorite </p>
+          <i class="fas fa-reply">Reply</i> <i class="fas fa-retweet">Retweet</i> <i class="far fa-star">Favorite</i>
     </section>
-    <h2 class="title1">TESTIMONIALS</h2>
-    <p class="paragraph-testimonials"> "The work they made impressed me on multiple levels. I have been very happy about the whole process and they have done a great job. They was fast to deliver new ideas and always helpful with our questions!”   
-    </p>
-    <p>
-    <em class="autor-testimonials">Richard Brennan</em><em class="team-testimonials">Linda Marketing Team</em>
-    </p> 
-    <section id="background-testimonials">
-      <img src="Images/entreprises/digitalside.png" alt="logo digitalside">
-      <img src="Images/entreprises/video-sms.png" alt="logo video-sms">
-      <img src="Images/entreprises/spectrum.png" alt="logo spectrum">
-      <img src="Images/entreprises/brilliant.png" alt="logo brilliant">
-      <img src="Images/entreprises/home-energy.png" alt="logo home-energy">
-      <img src="Images/entreprises/diagblock.png" alt="logo diagblock">
+    <section>
+      <h2 class="title1">TESTIMONIALS</h2>
+      <p class="paragraph-testimonials"> "The work they made impressed me on multiple levels. I have been very happy about the whole process and they have done a great job. They was fast to deliver new ideas and always helpful with our questions!”   
+      </p>
+       <p>
+        <em class="autor-testimonials">Richard Brennan</em><em class="team-testimonials">Linda Marketing Team</em>
+        </p> 
+      <div id="background-testimonials">
+        <img src="Images/entreprises/digitalside.png" alt="logo digitalside">
+        <img src="Images/entreprises/video-sms.png" alt="logo video-sms">
+        <img src="Images/entreprises/spectrum.png" alt="logo spectrum">
+        <img src="Images/entreprises/brilliant.png" alt="logo brilliant">
+        <img src="Images/entreprises/home-energy.png" alt="logo home-energy">
+        <img src="Images/entreprises/diagblock.png" alt="logo diagblock">
+    </div>
     </section>
     <section id="background-withus">
       <h1 class="title1">COME AND WORK WITH US</h1>
@@ -248,9 +254,9 @@
         <li class="paragraph-withus"><i class="fas fa-envelope-square"></i>johndoe@ipsum.com</li>
         <li class="paragraph-withus"><i class="fas fa-globe"></i>www.website.com</li>
       </ul>
-      <input placeholder="Name"> 
-     <input placeholder="Email"> 
-      <input placeholder="Message">
+        <input placeholder="Name"> 
+        <input placeholder="Email"> 
+        <input placeholder="Message">
     </section>
     <section id="background-locate-us">
       <span class="locate-withus">LOCATE US ON MAP</span>
